--- a/Proyecto_Final/.classpath
+++ b/Proyecto_Final/.classpath
@@ -6,6 +6,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/mssql-jdbc-12.10.1.jre11.jar"/>
+	<classpathentry kind="lib" path="C:/mssql-jdbc-12.10.1.jre11.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="com.miglayout.swing_11.4.2.jar"/>
+	<classpathentry kind="lib" path="com.miglayout.core_11.4.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
