--- a/Proyecto_Final/.classpath
+++ b/Proyecto_Final/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="com.miglayout.core_11.4.2.jar"/>
 	<classpathentry kind="lib" path="com.jgoodies.common_1.8.1.v20240327-0800.jar"/>
 	<classpathentry kind="lib" path="com.jgoodies.forms_1.9.0.v20240327-0800.jar"/>
+	<classpathentry kind="src" path="IMG"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
